# genai-product-catalog

./: .env  .gitignore  .gitmodules  CONTRIBUTORS.md  README.md  WORKSPACE  applied-ai.code-workspace  setup.py  user.bazelrc
conf/: BUILD.bazel  app.ini  app.toml  config.py  loader.ini  requirements.in  requirements.txt
docs/: BUILD  doc-gen.py
examples/loader/: BUILD.bazel  Dockerfile  README.md  __init__.py  chain.py  chain_new.py  chain_test.py  dataflow_loader.py  embed_test.py  loader.py  metadata.json  model.py  new_model.py  publish_csv.py  requirements.in  requirements.txt  setup.py
examples/loader/commands/: BUILD.bazel  __init__.py  cmd_batch_load.py  cmd_batch_load_images.py  cmd_bq_embedding_loader.py  cmd_csv_rdm.py  cmd_embedding_generator.py  cmd_fetch.py  cmd_gcs_image_store.py  cmd_local_embedding_store.py  cmd_local_image_load.py  cmd_rdm_reader.py  cmd_rt_verify.py  cmd_verify_connect_bq.py  cmd_verify_create_bq_schema.py  cmd_verify_env.py  config_loader.py
examples/loader/schema/: bq-pdc.json  bq-pdc.sql
examples/notebooks/: test.ipynb  test2.ipynb
examples/notebooks/conf/: app.toml
examples/service/: __init__.py  main.py  main_test.py
examples/service/models/: checks_model.py
examples/service/routers/: categories.py  checks.py  images.py  products.py
examples/services/: main.py
examples/services/models/: common_model.py
examples/services/routers/: categories.py  images.py
google/: BUILD.bazel  __init__.py
google/cloud/: BUILD.bazel  __init__.py
google/cloud/ml/: BUILD.bazel  __init__.py
google/cloud/ml/applied/: BUILD.bazel  __init__.py  config.py  config_test.py  gapic_version.py
google/cloud/ml/applied/attributes/: BUILD.bazel  __init__.py  attributes.py  attributes_test.py
google/cloud/ml/applied/categories/: BUILD.bazel  category.py  category_test.py
google/cloud/ml/applied/embeddings/: BUILD.bazel  embeddings.py  embeddings_test.py  search.py
google/cloud/ml/applied/images/: BUILD.bazel  __init__.py  image_to_text.py
google/cloud/ml/applied/knn/: BUILD.bazel  nearest_neighbors.py  nearest_neighbors_test.py
google/cloud/ml/applied/marketing/: BUILD.bazel  marketing.py  marketing_test.py
google/cloud/ml/applied/model/: BUILD.bazel  __init__.py  domain_model.py
google/cloud/ml/applied/utils/: BUILD.bazel  __init__.py  utils.py  utils_test.py
lib/attributes/: attributes_test.py
lib/categories/: category.py
lib/embeddings/: embeddings_test.py
lib/knn/: nearest_neighbors.py  nearest_neighbors_test.py
lib/loader/: BUILD.bazel  cmd_fetch.py  loader.py  model.py
lib/marketing/: marketing.py  marketing_test.py
lib/model/: BUILD.bazel  domain_model.py
lib/utils/: utils.py
notebooks/vectorSearchIndexUpdate/: NB1_create_batch_index.ipynb
services/: main.py  run.py
src/categories/: BUILD.bazel  category_test.py
src/embeddings/: embeddings.py
src/google/cloud/ml/applied/attributes/: BUILD.bazel  __init__.py  attributes.py  attributes_test.py
src/google/cloud/ml/applied/categories/: category.py
src/google/cloud/ml/applied/embeddings/: BUILD.bazel  embeddings.py  embeddings_test.py
src/google/cloud/ml/applied/images/: BUILD.bazel  image_to_text.py
src/google/cloud/ml/applied/knn/: BUILD.bazel
src/google/cloud/ml/applied/loader/: BUILD.bazel  cmd_fetch.py  loader.py
src/google/cloud/ml/applied/marketing/: marketing_test.py
src/google/cloud/ml/applied/services/: main_test.py
src/google/cloud/ml/applied/utils/: utils.py  utils_test.py
src/knn/: __init__.py
src/loader/: cmd_fetch.py
src/utils/: BUILD.bazel
