load("@rules_python//python:pip.bzl", "compile_pip_requirements")

filegroup(
    name = "app_config",
    srcs = [
        "app.ini",
    ],
    visibility = ["//:__subpackages__"],
)

compile_pip_requirements(
    name = "requirements",
    srcs = ["requirements.in"],
    requirements_txt = "requirements.txt",
)
