load("@rules_python//python:pip.bzl", "compile_pip_requirements")

filegroup(
    name = "config",
    srcs = [
        "app.toml",
    ],
    visibility = ["//:__subpackages__"],
)

compile_pip_requirements(
    name = "requirements",
    srcs = ["requirements.in"],
    requirements_txt = "requirements.txt",
)
