load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "google",
    srcs = [
        "__init__.py",
        "//google/cloud",
        "//google/cloud/ml",
        "//google/cloud/ml/applied",
        "//google/cloud/ml/applied/attributes",
        "//google/cloud/ml/applied/categories",
        "//google/cloud/ml/applied/embeddings",
        "//google/cloud/ml/applied/images",
        "//google/cloud/ml/applied/knn",
        "//google/cloud/ml/applied/model",
        "//google/cloud/ml/applied/utils",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
)
