load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("google-cloud-aiplatform"),
]

py_library(
    name = "marketing",
    srcs = [
        "marketing.py",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_test(
    name = "marketing_test",
    srcs = ["marketing_test.py"],
    imports = ["."],
    deps = [":marketing"],
)
