load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("google-cloud-aiplatform"),
    requirement("google-cloud-bigquery"),
]

py_library(
    name = "utils",
    srcs = [
        "utils.py",
    ],
    data = [
        "//conf:app_config",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_test(
    name = "utils_test",
    size = "small",
    srcs = ["utils_test.py"],
    imports = ["."],
    deps = [":utils"],
)
