load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("google-cloud-aiplatform"),
]

py_library(
    name = "knn",
    srcs = [
        "nearest_neighbors.py",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_test(
    name = "nearest_neighbors_test",
    srcs = ["nearest_neighbors_test.py"],
    imports = ["."],
    deps = [":nearest_neighbors"],
)
